// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateAxisLabels it generates appropriate XAxis tick labels for a given range of data 1`] = `
Array [
  "0.0",
  "0.1",
  "0.2",
  "0.3",
  "0.4",
  "0.5",
  "0.6",
  "0.7",
  "0.8",
  "0.9",
  "1.0",
  "1.1",
]
`;

exports[`generateAxisLabels it generates appropriate XAxis tick labels for a given range of data 2`] = `
Array [
  "-1.1",
  "-1.0",
  "-0.9",
  "-0.8",
  "-0.7",
  "-0.6",
  "-0.5",
  "-0.4",
  "-0.3",
  "-0.2",
  "-0.1",
  "-0.0",
  "0.1",
  "0.2",
  "0.3",
  "0.4",
  "0.5",
  "0.6",
  "0.7",
  "0.8",
  "0.9",
  "1.0",
  "1.1",
]
`;

exports[`generateAxisLabels it generates appropriate YAxis tick labels for a given range of data 1`] = `
Array [
  "-4",
  "-3",
  "-2",
  "-1",
  "0",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
]
`;

exports[`generateAxisLabels it generates appropriate YAxis tick labels for a given range of data 2`] = `
Array [
  "-4",
  "-3",
  "-2",
  "-1",
  "0",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
]
`;
